<resources>
    <string name="tag_edit_text">textEdit</string>
    <string name="app_name">HSCalculator</string>
    <string name="clear_text">CLEAR</string>
    <string name="edit_text_hint">0</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
</resources>
